[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neutron_tools"
version = "0.1.0"
description = "A collection of tools for neutron transport and activation calculations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.1",
    "scipy>=1.7.0",
    "sympy>=1.8",
    "matplotlib>=3.4.2",
    "pandas>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
